# age_of_civ

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.txt  Dockerfile.headless  PLAN.md  UI_PLAN.md  WORKPACKAGES.md  asan_suppressions.txt  ideas.txt  run.sh  run_matrix.sh  todo.txt
data/: marathon_test.yaml  simulation.yaml
data/definitions/: buildings.json  goods.json  improvements.json  leaders.json  recipes.json  techs.json  units.json
data/scripts/: init.lua
data/scripts/events/: plague.lua
data/scripts/victory/: economic_victory.lua
docs/: 3D_GLOBE_FUTURE.md  AI_ARCHITECTURE.md  AI_MULTI_SYSTEM_COORDINATION.md  BROWSER_PORT_IDEA.md  CIV6_REFERENCE_DATA.md  CROSS_PLATFORM_BUILD.md  CROSS_SYSTEM_TRADE_HISTORY.md  ECONOMICS.md  ECONOMY_DESIGN.md  FIXLIST_2026-04-21.md  FIX_PLAN_2026-04-21.md  FUTURE_IMPROVEMENTS.md  IDEAS_ANALYSIS.md  MECHANICS.md  MECHANICS_ANALYSIS.md  MECHANICS_AUDIT_2026-04-21.md  MOD_SUPPORT.md  MONETARY_REDESIGN.md  PHYSICS_FIRST_REWRITE.md  SERVER_CLIENT_ARCHITECTURE.md  SIMULATION_TOOL.md
docs/architecture/: .arch-doc-stamp  dependencies.md  interactions.md  overview.md
docs/architecture/components/: app.md  audio.md  balance-ml.md  core.md  data.md  debug.md  game.md  map.md  mod.md  net.md  render.md  replay.md  save.md  scripting.md  simulation.md  ui.md
docs/archive/: AUDIT_REPORT.md  AUDIT_REPORT_2026-05-10.md  AUDIT_REPORT_2026-06-06.md  IDEAS_V2_PLAN.md  IDEAS_V3_PLAN.md  PHYSICS_REWRITE_CONTINUE.md  SIM_REWRITE_TODO.md  SPHERE_MIGRATION.md  TODO.md
docs/concepts/: confederation.md  continent_generation_design.md  plate_tectonics.md
docs/ui/: style_guide.md
include/aoc/app/: Application.hpp  DebugCommandFile.hpp  HotkeyManager.hpp  InputActions.hpp  InputManager.hpp  ScreenshotEncoder.hpp  UnitSelection.hpp  Window.hpp
include/aoc/audio/: AudioBackend.hpp  AudioManager.hpp  MusicManager.hpp  SoundEvent.hpp
include/aoc/balance/: BalanceParams.hpp
include/aoc/core/: DecisionLog.hpp  Deterministic.hpp  ErrorCodes.hpp  Log.hpp  PathGuard.hpp  Random.hpp  Selectable.hpp  SimpleYaml.hpp  Types.hpp
include/aoc/data/: DataLoader.hpp  JsonParser.hpp
include/aoc/debug/: DebugServer.hpp
include/aoc/ecs/: ComponentPool.hpp  PlayerCityIndex.hpp  PlayerIndex.hpp  SystemScheduler.hpp  World.hpp
include/aoc/game/: City.hpp  GameState.hpp  Player.hpp  Unit.hpp
include/aoc/map/: FogOfWar.hpp  HexCoord.hpp  HexGrid.hpp  LandmassMetrics.hpp  MapGenerator.hpp  Pathfinding.hpp  (+2 more)
ml/: ai_recommendations.txt  diagnose_economy.py  economic_report.txt  evolve_utility.py  evolved_summary.txt  extract_weights.py  simulation_log.csv  simulation_log_events.csv  train_pretrained_ppo.py  train_selfplay.py  train_supervised.py
ml/cpp/: BalanceTuner.cpp  BalanceTuner.hpp  CMakeLists.txt  FitnessEvaluator.cpp  FitnessEvaluator.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  ThreadPool.hpp  main.cpp
scripts/: audit_matrix.sh  audit_mechanics.sh  bench.sh  csv_diff.py  pgo_build.sh  preflight.sh  regression_lib.sh  regression_mapgen.sh  regression_sim.sh  smoke_recipes.sh  sweep_matrix.sh  test_determinism.sh  test_golden_sim.sh  tune_per_leader.sh
src/: main.cpp
src/app/: Application.cpp  ApplicationHelpers.hpp  Application_HUD.cpp  DebugCommandFile.cpp  HotkeyManager.cpp  InputManager.cpp  ScreenshotEncoder.cpp  UnitSelection.cpp  Window.cpp
src/audio/: AudioBackend.cpp
src/balance/: BalanceParams.cpp
src/core/: DecisionLog.cpp  ErrorCodes.cpp  PathGuard.cpp  Selectable.cpp
src/data/: DataLoader.cpp
src/debug/: DebugServer.cpp
src/ecs/: World.cpp
src/game/: City.cpp  GameState.cpp  Player.cpp  Unit.cpp
src/map/: FogOfWar.cpp  HexGrid.cpp  LandmassMetrics.cpp  MapGenerator.cpp  Pathfinding.cpp  RiverGameplay.cpp
src/mod/: ModLoader.cpp
src/net/: GameDBus.cpp  GameServer.cpp  Transport.cpp
src/render/: CameraController.cpp  CombatAnimation.cpp  DrawCommandBuffer.cpp  GameRenderer.cpp  GlobeRenderer.cpp  MapOverlays.cpp  MapRenderer.cpp  Minimap.cpp  Particles.cpp  SpriteRenderer.cpp  TextureAtlas.cpp  UnitRenderer.cpp
src/replay/: ReplayRecorder.cpp
src/save/: Serializer.cpp
src/scripting/: LuaEngine.cpp
src/tools/: HeadlessSimulation.cpp  MapGenCli.cpp  TraceDump.cpp
src/ui/: BitmapFont.cpp  CityDetailTabs.cpp  DebugConsole.cpp  DiplomacyScreen.cpp  Encyclopedia.cpp  EventLog.cpp  GameNotifications.cpp  GameScreens.cpp  IconAtlas.cpp  LayoutBuilder.cpp  LoadingScreen.cpp  Localization.cpp  MainMenu.cpp  MapEditor.cpp  Notifications.cpp  PauseMenu.cpp  ReligionScreen.cpp  ScoreScreen.cpp  ScreenRegistry.cpp  SettingsMenu.cpp  SpectatorHUD.cpp  Theme.cpp  Tooltip.cpp  TradeRouteSetupScreen.cpp  TradeScreen.cpp  Tutorial.cpp  UIManager.cpp  UIPersistence.cpp  UITestHarness.cpp  WidgetInspector.cpp
tests/: test_behavior_tree.cpp  test_building_capacity.cpp  test_combat_kills.cpp  test_deal_atomicity.cpp  test_decision_log_io.cpp  test_deterministic_argmax.cpp  test_diplomatic_favor.cpp  test_economy_invariants.cpp  test_iou_term_expiry.cpp  test_json_parser_depth.cpp  test_lua_sandbox.cpp  test_path_guard.cpp  test_production_efficiency.cpp  test_save_finite.cpp  test_save_hostile.cpp  test_save_roundtrip.cpp  test_unemployment.cpp  test_zoc_movement.cpp
tests/fuzz/: fuzz_save_loader.cpp
tests/golden/: README.md  seed42_turns500.sha256
tools/: aoc_debug.sh  diagnose_mountain_edges.py  diagnose_peak_sample_leak.py  diagnose_plate_shapes.py  mapgen_metrics.py  run_diagnostic_matrix.sh
tools/aoc_dbg/: diff.sh  dump.sh  info.sh  plates.sh  regen.sh  schema.sh  scrub.sh  step.sh  walk.sh
tools/diag/: PHASE1_DIAGNOSIS.md  PHASE1_FINDINGS.md  blocker_analyzer.py  blocker_table.csv
tools/mapgen_baselines/: phase0-pre.json  phase2-post.json  phase3-post.json  phase4-post.json  phase5-post.json  phase6-post.json  phase7-post.json  platefix-post.json
tools/plate_data/: .gitignore  README.md  STATISTICS.md  analyze.py  audit_polygon.py  extract_statistics.py  orogen_reference.txt  render_frames.py  validate_polygons.py
(+348 files in other folders)
